RbA Build/src/objects/Discount__c.object
<CustomObject>
    <description>Discounts &amp; promotions for customers</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check if this is an active discount or promotion.</description>
        <inlineHelpText>Check if this is an active discount or promotion.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the discount / promotion.</description>
        <inlineHelpText>Description of the discount / promotion.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Promotion_End__c</fullName>
        <description>The end date of this discount or promotion</description>
        <inlineHelpText>The end date of this discount or promotion</inlineHelpText>
        <label>Promotion End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promotion_Start__c</fullName>
        <description>The start date of this discount or promotion.</description>
        <inlineHelpText>The start date of this discount or promotion.</inlineHelpText>
        <label>Promotion Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Store_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The store or group of stores this discount is used by</description>
        <inlineHelpText>The store or group of stores this discount is used by</inlineHelpText>
        <label>Store Location</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected account must be a store.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Store</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Discounts</relationshipLabel>
        <relationshipName>Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Discount</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>